# Authenticated-Lighting-Network-Protocol

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  roadmap.md
.cargo/: config.toml
.github/workflows/: c-release.yml  docs-release.yml  e2e-tests.yml  embedded.yml  protocol-publish.yml  python-release.yml  rust-release.yml  sdk-publish.yml  sdk-python-publish.yml  sdk-ts-publish.yml  ts-release.yml
bindings/c/: alnp.h
bindings/cpp/: alnp.hpp
bindings/ts/: package.json  (+1 more)
docs/: architecture.md  bindings.md  control_plane.md  handshake.md  implementation_audit.md  overview.md  reference_impl.md  release_process.md  status.md  streaming.md
scripts/: build_c.sh  build_embedded_cpp.sh  build_python.sh  build_rust.sh  build_ts.sh  docker-c-package.Dockerfile
sdk/: README.md
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  discovery.rs  error.rs  lib.rs
sdk/rust/src/transport/: mod.rs  quic.rs  udp.rs
src/alnp/: Cargo.toml  README.md
src/alnp/docs/: benchmarks.md
src/alnp/messages/: alnp_handshake.proto
src/alnp/src/: control.rs  device.rs  discovery.rs  e2e_common.rs  lib.rs  profile.rs  stream.rs
src/alnp/src/crypto/: identity.rs  mod.rs
src/alnp/src/handshake/: client.rs  keepalive.rs  mod.rs  server.rs  transport.rs
src/alnp/src/messages/: mod.rs
src/alnp/src/sdk/: mod.rs
src/alnp/src/session/: mod.rs  state.rs
src/alnp/src/stream/: sacn_adapter.rs
src/alnp/tests/: basic.rs  e2e.rs  feature_suite.rs  perf.rs
src/alnp/tests/e2e/: common.rs  control_invalid_json.rs  control_keepalive_reset.rs  control_loss_recovery.rs  control_reorder.rs  control_retransmit_backoff.rs  control_udp_e2e.rs  failure_paths.rs  handshake_fail_replay.rs  handshake_fail_wrong_signature.rs  handshake_ok.rs  handshake_timeout.rs  handshake_udp_e2e.rs  streaming_basic.rs  streaming_fail_closed.rs  streaming_jitter_modes.rs  streaming_multiverse.rs  streaming_sequence_rollover.rs  streaming_toggle_modes.rs  streaming_udp_e2e.rs
src/alnp/tests/perf/: perf_control_latency.rs  perf_keepalive_stability.rs  perf_mixed_conditions.rs  perf_streaming_load.rs  perf_universe_capacity.rs
src/alnp/tests/support/: asserts.rs  mock_stream.rs  mock_udp.rs  mod.rs
(+77 files in other folders)
