[package]
name = "alpine-protocol-sdk"
version = "0.1.4"
edition = "2021"
description = "High-level SDK on top of the ALPINE protocol layer."
authors = ["alpine-core"]
license = "Apache-2.0"

alpine_protocol_rs = "2.0.15"
serde_json = "1.0"
tokio = { version = "1.37", features = ["net", "rt", "rt-multi-thread", "time", "macros"] }
uuid = { version = "1.18", features = ["v4"] }
rand = "0.8"
serde_cbor = "0.11"
