[package]
name = "alnp"
version = "0.1.0"
edition = "2021"
description = "Authenticated Lighting Network Protocol scaffolding built atop sACN transport."
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
uuid = { version = "1.6", features = ["serde", "v4"] }
