[package]
name = "alnp"
version = "0.1.0"
edition = "2021"
description = "Authenticated Lighting Network Protocol scaffolding built atop sACN transport."
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
uuid = { version = "1.6", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets", "getrandom"] }
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
rand_core = "0.6"
rustls-pemfile = "2.1"
tokio = { version = "1.37", features = ["net", "rt", "rt-multi-thread", "time", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
parking_lot = "0.12"
